@@ -1,5 +1,6 @@
 Changes for 1.4.1:
 
+ - fixed pinger to process DNS name instead of host name (Alexei)
  - fixed possible incorrect memory access in nodewatcher (Alexei)
  - fixed processing of cmdline for proc.num and proc.mem (Alexei)
  - fixed processing of {IPADDRESS} for hosts monitored by DNS name (Alexei)
